# zatorres-foot-measurement

./: README.md  app.py  package-lock.json  package.json  replit.md  requirements.txt
attached_assets/: Belgravia_D_Size_Chart_1752758020142.csv  Belgravia_EE_Size_Chart_1752758020142.csv  Drake_D_Size_Chart_1752758020141.csv  Monti_D_Size_Chart_1752758020144.csv  Monti_EEE_Size_Chart_1752758020144.csv  Monti_EE_Size_Chart_1752758020144.csv  Saville_D_Size_Chart_1752758020143.csv  Saville_EEE_Size_Chart_1752758020143.csv  Saville_EE_Size_Chart_1752758020143.csv  Venetian_Size_Chart_1752758020141.csv  Wellington_D_Size_Chart_1752758020141.csv  Zurigo_D_Size_Chart_1752758020143.csv  Zurigo_EEE_Size_Chart_1752758020143.csv  Zurigo_EE_Size_Chart_1752758020143.csv
client/: iframe-test.html
client/src/: App.tsx  index.css
client/src/components/: last-illustration.tsx  last-selection.tsx  measurement-form.tsx  measurement-guide.tsx  size-results.tsx  step-indicator.tsx
client/src/components/icons/: socks-icon.tsx  zatorres-logo.tsx
client/src/lib/: last-descriptions.ts  last-visuals.ts  sizing-calculator.ts  sizing-data.ts
client/src/pages/: sizing-assistant.tsx
server/: build.sh  foot_measurement.py  index.ts  pyproject.toml  routes.ts  storage.ts  test.txt
shared/: schema.ts
